--- a/src/components/layout/action_navigation/ActionNavigation.scss
+++ b/src/components/layout/action_navigation/ActionNavigation.scss
@@ -9,6 +9,7 @@
   background-color: #fff;
   border-bottom: 1px solid #d4d4d4;
   border-left: 1px solid #d4d4d4;
+  border-right: 1px solid #d4d4d4;
   z-index: 1;
 
   nav {
@@ -34,7 +35,7 @@
           cursor: pointer;
           transition:background-color 0.3s ease-in-out;
         }
-        &.is_active {
+        &.is-active {
           background-color: #ecf0f7;
         }
       }
