[paxful-04] Added media queries and sidebar

--- a/src/components/trade_information/tradeInformation.scss
+++ b/src/components/trade_information/tradeInformation.scss
@@ -1,5 +1,9 @@
 .trade-information {
   margin-bottom: 20px;
+  line-height: 1.5;
+  text-align: center;
+  word-break: break-all;
+  font-size: 0.9rem;
 
   span {
     color: #575D6C;
