--- a/src/components/layout/action_navigation/ActionNavigation.scss
+++ b/src/components/layout/action_navigation/ActionNavigation.scss
@@ -11,9 +11,13 @@
   border-left: 1px solid #d4d4d4;
   border-right: 1px solid #d4d4d4;
   z-index: 1;
+  @media only screen and (max-width: 850px) {
+    padding: 0 40px 0 0;
+  }
 
   nav {
     list-style: none;
+
     ul {
       li {
         font-size: 0.9rem;
@@ -21,20 +25,28 @@
         height: 50px;
         line-height: 50px;
         border-right: 1px solid #d4d4d4;
+
         div {
           padding: 0 1.8rem;
           height: 100%;
           display: inline;
+
+          @media only screen and (max-width: 850px) {
+            padding: 0 1.2rem;
+          }
         }
+
         &:first-child {
           border-left: 1px solid #d4d4d4;
           font-weight: 600;
         }
+
         &:hover {
           background-color: #ecf0f7;
           cursor: pointer;
-          transition:background-color 0.3s ease-in-out;
+          transition: background-color 0.3s ease-in-out;
         }
+
         &.is-active {
           background-color: #ecf0f7;
         }
