--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,16 @@
- //variables
+//variables
 
- //colors
+//colors
 
- $bgColor: #ecf0f7;
- $borderColor: #d4d4d4;
+$bgColor: #ecf0f7;
+$borderColor: #d4d4d4;
+$activeLinkColor: #30364D;
+
+$activeTradeBgColor: #F5F7FA;
+
+$grayTextColor: #a7a7a7;
+
+$textGreen: #48C57F;
+
+$borderGrayColor: #d4d4d4;
+$activeTradeStateColor: #55D3C3;
