--- a/src/components/trade_information/trade_amount/tradeAmount.scss
+++ b/src/components/trade_information/trade_amount/tradeAmount.scss
@@ -2,9 +2,16 @@
   font-weight: 600;
   margin-bottom: 15px;
   text-transform: uppercase;
+  font-size: 0.9rem;
+  @media only screen and (min-width: 768px) and (max-width: 940px) {
+    font-size: 0.6rem;
+  }
 }
 
 .trade-amount__value {
   font-weight: 600;
   color: #a7a7a7;
+  @media only screen and (min-width: 768px) and (max-width: 940px) {
+    font-size: 0.6rem;
+  }
 }
