--- a/src/components/trade_information/trade_counter/tradeCounter.scss
+++ b/src/components/trade_information/trade_counter/tradeCounter.scss
@@ -2,8 +2,15 @@
   font-weight: 600;
   margin-bottom: 15px;
   text-transform: uppercase;
+  font-size: 0.9rem;
+  @media only screen and (min-width: 768px) and (max-width: 940px) {
+    font-size: 0.6rem;
+  }
 }
 
 .trade-counter__value {
   font-weight: 600;
+  @media only screen and (min-width: 768px) and (max-width: 940px) {
+    font-size: 0.6rem;
+  }
 }
