--- a/src/components/trade_information/trade_status/tradeStatus.scss
+++ b/src/components/trade_information/trade_status/tradeStatus.scss
@@ -2,14 +2,17 @@
   font-weight: 600;
   margin-bottom: 15px;
   text-transform: uppercase;
+  font-size: 0.9rem;
+  @media only screen and (min-width: 768px) and (max-width: 940px) {
+    font-size: 0.6rem;
+  }
 }
 
 .trade-status__value {
   font-weight: 600;
   text-transform: uppercase;
   color: #52D48C;
-  font-size: 1.1rem;
-  @media only screen and (max-width: 850px) {
-    font-size: inherit;
+  @media only screen and (min-width: 768px) and (max-width: 940px) {
+    font-size: 0.8rem;
   }
 }
