--- a/src/components/chat/chat-input/chatInput.scss
+++ b/src/components/chat/chat-input/chatInput.scss
@@ -2,10 +2,10 @@
   display: flex;
   width: 100%;
   margin-top: 10px;
-  input[type="text"] {
+  input[type="text"], input {
     width: 100%;
-    height: 20px;
-    padding: 10px;
+    padding: 0 40px 0 10px;
+    height: 40px;
   }
 
   button {
