--- a/src/components/layout/action_navigation/ActionNavigation.scss
+++ b/src/components/layout/action_navigation/ActionNavigation.scss
@@ -47,8 +47,15 @@
           transition: background-color 0.3s ease-in-out;
         }
 
-        &.is-active {
-          background-color: #ecf0f7;
+        a {
+          text-decoration: none;
+          color: #000;
+          &.is-active {
+            background-color: #ecf0f7;
+          }
+          &:focus, &:hover {
+
+          }
         }
       }
     }
