--- a/src/components/trade/tradeItem.scss
+++ b/src/components/trade/tradeItem.scss
@@ -16,6 +16,11 @@
     padding: 20px 40px 20px 60px;
   }
 
+  &:hover {
+    cursor: pointer;
+    background-color: $activeTradeBgColor;
+  }
+
   &.is-active {
     background-color: $activeTradeBgColor;
     position: relative;
@@ -57,85 +62,96 @@
     }
   }
 
-  .trade-item__action {
-    position: relative;
-    color: $grayTextColor;
-    font-size: 0.9rem;
-    @media only screen and (min-width: 768px) and (max-width: 940px) {
-      font-size: 0.8rem;
-    }
-
-    span {
-      font-weight: 600;
-    }
-
-    &:before {
-      content: '';
-      border-radius: 0.6rem;
-      height: 0.6rem;
-      width: 0.6rem;
-      margin-right: 0.5rem;
-      background-color: #55D3C3;
-      position: absolute;
-      left: -30px;
-      top: 6px;
-    }
-  }
-
-  .trade-item__payment {
-    font-weight: 600;
-    font-size: 1.0rem;
-    @media only screen and (min-width: 768px) and (max-width: 940px) {
-      font-size: 0.9rem;
-    }
-  }
-
-  .trade-item__value {
-    color: $grayTextColor;
-    font-size: 0.8rem;
-  }
-
-  .trade-item__buyer_wrapper {
+  a {
+    text-decoration: none;
+    width: 100%;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    width: 61px;
+    justify-content: space-between;
 
-    .trade-item__buyer {
-      width: 40px;
-      height: 40px;
-      align-items: center;
-      background-color: #C6D2E5;
-      border-radius: 50%;
-      background-size: cover;
-      overflow: hidden;
-      margin-bottom: 8px;
-
-      img {
-        object-fit: cover;
-        width: 100%;
-        position: relative;
-        height: 100%;
-      }
+    &:hover {
+      background-color: transparent;
     }
 
-    .trade-item__status {
-      font-size: 0.8rem;
-      font-weight: 600;
-      color: $textGreen;
+    .trade-item__action {
+      position: relative;
+      color: $grayTextColor;
+      font-size: 0.9rem;
       @media only screen and (min-width: 768px) and (max-width: 940px) {
-        font-size: 0.6rem;
+        font-size: 0.8rem;
+      }
+
+      span {
+        font-weight: 600;
+      }
+
+      &:before {
+        content: '';
+        border-radius: 0.6rem;
+        height: 0.6rem;
+        width: 0.6rem;
+        margin-right: 0.5rem;
+        background-color: #55D3C3;
+        position: absolute;
+        left: -30px;
+        top: 6px;
       }
     }
-  }
 
-  &:hover {
-    cursor: pointer;
-    background-color: $activeTradeBgColor;
-  }
+    .trade-item__payment {
+      font-weight: 600;
+      font-size: 1.0rem;
+      color: black;
+      @media only screen and (min-width: 768px) and (max-width: 940px) {
+        font-size: 0.9rem;
+      }
+    }
 
-  &.is-active {
-    background-color: $activeTradeBgColor;
+    .trade-item__value {
+      color: $grayTextColor;
+      font-size: 0.8rem;
+    }
+
+    .trade-item__buyer_wrapper {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      width: 61px;
+
+      .trade-item__buyer {
+        width: 40px;
+        height: 40px;
+        align-items: center;
+        background-color: #C6D2E5;
+        border-radius: 50%;
+        background-size: cover;
+        overflow: hidden;
+        margin-bottom: 8px;
+
+        img {
+          object-fit: cover;
+          width: 100%;
+          position: relative;
+          height: 100%;
+        }
+      }
+
+      .trade-item__status {
+        font-size: 0.8rem;
+        font-weight: 600;
+        color: $textGreen;
+        @media only screen and (min-width: 768px) and (max-width: 940px) {
+          font-size: 0.6rem;
+        }
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    &.is-active {
+      background-color: $activeTradeBgColor;
+    }
   }
 }
