[paxful-15] Updated props and store

--- a/src/components/layout/top_navigation/topNavigation.scss
+++ b/src/components/layout/top_navigation/topNavigation.scss
@@ -36,6 +36,26 @@ header {
     }
 
   }
+  .hamburger-menu-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 24px;
+    width: 30px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    box-sizing: border-box;
+    &:focus {
+      outline: none;
+    }
+    .hamburger-menu-button__line {
+      width: 30px;
+      height: 2px;
+      background: white;
+    }
+  }
 
 }
 
@@ -67,3 +87,75 @@ header {
     }
   }
 }
+
+
+.sidebar-navigation {
+  background: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translate3d(-100vw, 0, 0);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 15;
+
+  ul {
+    align-items: center;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    a {
+      color: $activeLinkColor;
+      text-decoration: none;
+      line-height: 4rem;
+      font-size: 2rem;
+      font-weight: 200;
+
+      &.is-active {
+        font-weight: 600;
+      }
+    }
+  }
+
+  &.is-open {
+    transition: all 0.3s;
+    transform: translate3d(100vw, 0, 0) translateX(-100%);
+  }
+
+  .sidebar-navigation__close {
+    position: absolute;
+    right: 32px;
+    top: 32px;
+    width: 32px;
+    height: 32px;
+    opacity: 0.3;
+    cursor: pointer;
+    text-indent: -99999px;
+    &:hover {
+      opacity: 1;
+    }
+    &:before, &:after {
+      position: absolute;
+      left: 15px;
+      content: ' ';
+      height: 33px;
+      width: 2px;
+      background-color: #333;
+    }
+    &:before {
+      transform: rotate(45deg);
+    }
+    &:after {
+      transform: rotate(-45deg);
+    }
+  }
+  .close:hover {
+    opacity: 1;
+  }
+}
+
