--- a/src/components/trade/tradeItem.scss
+++ b/src/components/trade/tradeItem.scss
@@ -23,25 +23,28 @@
   &.is-active {
     background-color: $activeTradeBgColor;
     position: relative;
-    border-top: 1px solid $borderGrayColor;
-    border-bottom: 1px solid $borderGrayColor;
-    margin: -1px -6px 0px 0px;
+    @media only screen and (min-width: 768px) {
+      border-top: 1px solid $borderGrayColor;
+      border-bottom: 1px solid $borderGrayColor;
+      margin: -1px -6px 0px 0px;
+    }
     left: 0;
     padding-left: 60px;
-
-    &:after {
-      content: '';
-      position: absolute;
-      background-color: $activeTradeBgColor;
-      height: 100%;
-      width: 30px;
-      right: -10px;
-      z-index: 13;
-      border-top-right-radius: 6px;
-      border-bottom-right-radius: 6px;
-      border-top: 1px solid #D6DBE2;
-      border-bottom: 1px solid #D6DBE2;
-      border-right: 1px solid #D6DBE2;
+    @media only screen and (min-width: 768px) {
+      &:after {
+        content: '';
+        position: absolute;
+        background-color: $activeTradeBgColor;
+        height: 100%;
+        width: 30px;
+        right: -10px;
+        z-index: 13;
+        border-top-right-radius: 6px;
+        border-bottom-right-radius: 6px;
+        border-top: 1px solid #D6DBE2;
+        border-bottom: 1px solid #D6DBE2;
+        border-right: 1px solid #D6DBE2;
+      }
     }
 
     .trade-item__action {
@@ -85,9 +88,9 @@
 
       &:before {
         content: '';
-        border-radius: 0.6rem;
-        height: 0.6rem;
-        width: 0.6rem;
+        border-radius: 50%;
+        height: 10px;
+        width: 10px;
         margin-right: 0.5rem;
         background-color: #55D3C3;
         position: absolute;
