--- a/src/components/trade_information/tradeInformation.scss
+++ b/src/components/trade_information/tradeInformation.scss
@@ -4,6 +4,9 @@
   text-align: center;
   word-break: break-word;
   font-size: 0.9rem;
+  time {
+    text-transform: lowercase;
+  }
 
   span {
     color: #575D6C;
