--- a/src/components/chat/chat-header/ChatHeaderContainer.scss
+++ b/src/components/chat/chat-header/ChatHeaderContainer.scss
@@ -7,6 +7,9 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  @media only screen and (max-width: 767px) {
+    margin-top: 0;
+  }
   .chatHeader__header {
     text-align: center;
     line-height: 1.5;
