--- a/src/components/chat/chat-input/chatInput.scss
+++ b/src/components/chat/chat-input/chatInput.scss
@@ -1,30 +1,35 @@
+@import '.././../../styles/variables.scss';
+
 .chatInput__wrapper {
   display: flex;
   width: 100%;
   margin-top: 10px;
   position: relative;
+
   input[type="text"], input {
     width: 100%;
     padding: 0 58px 0 10px;
-    height: 40px;
+    height: 2.5rem;
   }
 
   button {
     right: 0.1rem;
-    height: 41px;
-    width: 65px;
+    height: 2.5rem;
+    width: 4rem;
     background: white;
-    color: #46CA6C;
+    color: $textGreen;
     border: 0;
     -webkit-appearance: none;
     position: absolute;
     top: 0.1rem;
-    font-size: 0.7rem;
+    font-size: $fontSmallChatSize - 0.1;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: $fontWeightBold;
+
     &:hover {
       cursor: pointer;
     }
+
     &:focus {
       outline: none;
     }
