--- a/src/components/layout/sidebar_navigation/sidebarNavigation.scss
+++ b/src/components/layout/sidebar_navigation/sidebarNavigation.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  z-index: 15;
+  z-index: $zIndexTop;
 
   ul {
     align-items: center;
@@ -25,10 +25,10 @@
       text-decoration: none;
       line-height: 4rem;
       font-size: 2rem;
-      font-weight: 200;
+      font-weight: $fontWeightExtraLight;
 
       &.is-active {
-        font-weight: 600;
+        font-weight: $fontWeightBold;
       }
     }
   }
@@ -40,31 +40,36 @@
 
   .sidebar-navigation__close {
     position: absolute;
-    right: 32px;
-    top: 32px;
-    width: 32px;
-    height: 32px;
+    right: 2rem;
+    top: 2rem;
+    width: 2rem;
+    height: 2rem;
     opacity: 0.3;
     cursor: pointer;
     text-indent: -99999px;
+
     &:hover {
       opacity: 1;
     }
+
     &:before, &:after {
       position: absolute;
       left: 15px;
       content: ' ';
       height: 33px;
       width: 2px;
-      background-color: #333;
+      background-color: darken($darkGrayColor, 50);
     }
+
     &:before {
       transform: rotate(45deg);
     }
+
     &:after {
       transform: rotate(-45deg);
     }
   }
+
   .close:hover {
     opacity: 1;
   }
