--- a/src/components/layout/top_navigation/topNavigation.scss
+++ b/src/components/layout/top_navigation/topNavigation.scss
@@ -1,4 +1,5 @@
 @import '.././../../styles/variables.scss';
+
 header {
   .top-navigation {
     display: flex;
@@ -6,11 +7,11 @@ header {
     flex: max-content;
     height: 50px;
     background-color: $activeLinkColor;
-    padding: 0 30px;
+    padding: 0 2rem;
     align-items: center;
 
     .top-navigation__logo {
-      @media only screen and (max-width: 767px) {
+      @media only screen and (max-width: $screen-md-max) {
         width: 100%;
         text-align: center;
       }
@@ -22,20 +23,21 @@ header {
       a {
         color: white;
         text-decoration: none;
-        font-weight: 300;
+        font-weight: $fontWeightLight;
         margin: 0 0.6rem;
         font-size: 0.9rem;
         display: inline-flex;
-        line-height: 50px;
+        line-height: 3rem;
 
         &.is-active {
           text-decoration: underline;
-          font-weight: 400;
+          font-weight: $fontWeightNormal;
         }
       }
     }
 
   }
+
   .hamburger-menu-button {
     display: flex;
     flex-direction: column;
@@ -47,11 +49,13 @@ header {
     cursor: pointer;
     padding: 0;
     box-sizing: border-box;
+
     &:focus {
       outline: none;
     }
+
     .hamburger-menu-button__line {
-      width: 30px;
+      width: 2rem;
       height: 2px;
       background: white;
     }
@@ -62,27 +66,30 @@ header {
 .sidebar-navigation {
   background: white;
   position: fixed;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   transform: translate3d(-100vw, 0, 0);
   width: 100vw;
   height: 100vh;
-  z-index: 2;
+  z-index: $zIndexTop;
   display: flex;
   flex-direction: column;
   justify-content: center;
+
   ul {
     align-items: center;
     list-style: none;
     display: flex;
     flex-direction: column;
     justify-content: center;
+
     a {
       color: $activeLinkColor;
       text-decoration: none;
       line-height: 2rem;
+
       &.is-active {
-        font-weight: 600;
+        font-weight: $fontWeightBold;
       }
     }
   }
@@ -100,7 +107,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  z-index: 15;
+  z-index: $zIndexTop;
 
   ul {
     align-items: center;
@@ -114,10 +121,10 @@ header {
       text-decoration: none;
       line-height: 4rem;
       font-size: 2rem;
-      font-weight: 200;
+      font-weight: $fontWeightExtraLight;
 
       &.is-active {
-        font-weight: 600;
+        font-weight: $fontWeightBold;
       }
     }
   }
@@ -136,9 +143,11 @@ header {
     opacity: 0.3;
     cursor: pointer;
     text-indent: -99999px;
+
     &:hover {
       opacity: 1;
     }
+
     &:before, &:after {
       position: absolute;
       left: 15px;
@@ -147,13 +156,16 @@ header {
       width: 2px;
       background-color: #333;
     }
+
     &:before {
       transform: rotate(45deg);
     }
+
     &:after {
       transform: rotate(-45deg);
     }
   }
+
   .close:hover {
     opacity: 1;
   }
