--- a/src/components/layout/trade/trade_information_statistcis/tradeInformationStatisticsWrapper.scss
+++ b/src/components/layout/trade/trade_information_statistcis/tradeInformationStatisticsWrapper.scss
@@ -1,5 +1,5 @@
+@import '.././../../../styles/mixins.scss';
 .grid {
-  /* min-height: 100%; */
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -7,9 +7,8 @@
 }
 
 .grid > div > div {
-  display: flex;
+  @include flexColCenter();
   justify-content: center;
-  flex-direction: column;
   align-items: center;
   min-height: 80px;
 }
