--- a/src/components/spinner/spinner.scss
+++ b/src/components/spinner/spinner.scss
@@ -5,9 +5,8 @@
   height: 10em;
 }
 .loader {
-  margin: 60px auto;
-  font-size: 10px;
-  position: relative;
+  position: fixed;
+  font-size: 9px;
   text-indent: -9999em;
   border-top: 1.1em solid rgba(255, 255, 255, 0.2);
   border-right: 1.1em solid rgba(255, 255, 255, 0.2);
@@ -18,7 +17,8 @@
   transform: translateZ(0);
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
-  top: 20%;
+  top: 40%;
+  left: calc(50% - 70px);
 }
 @-webkit-keyframes load8 {
   0% {
