--- a/src/components/trade_information/trade_counter/tradeCounter.scss
+++ b/src/components/trade_information/trade_counter/tradeCounter.scss
@@ -1,16 +1,17 @@
+@import '.././../../styles/variables.scss';
 .trade-counter__title {
-  font-weight: 600;
-  margin-bottom: 15px;
+  font-weight: $fontWeightBold;
+  margin-bottom: 0.9rem;
   text-transform: uppercase;
-  font-size: 0.9rem;
-  @media only screen and (min-width: 768px) and (max-width: 940px) {
-    font-size: 0.6rem;
+  font-size: $fontSmallSize;
+  @media only screen and (min-width: $screen-lg-min) and (max-width: $screen-lg-md-max) {
+    font-size: $fontSmallMdSize;
   }
 }
 
 .trade-counter__value {
-  font-weight: 600;
-  @media only screen and (min-width: 768px) and (max-width: 940px) {
-    font-size: 0.6rem;
+  font-weight: $fontWeightBold;
+  @media only screen and (min-width: $screen-lg-min) and (max-width: $screen-lg-md-max) {
+    font-size: $fontSmallMdSize;
   }
 }
