--- a/src/components/trade_information/trade_hash/tradeHash.scss
+++ b/src/components/trade_information/trade_hash/tradeHash.scss
@@ -1,17 +1,19 @@
+@import '.././../../styles/variables.scss';
+
 .trade-hash__title {
-  font-weight: 600;
-  margin-bottom: 15px;
+  font-weight: $fontWeightNormal;
+  margin-bottom: 0.9rem;
   text-transform: uppercase;
-  font-size: 0.9rem;
-  @media only screen and (min-width: 768px) and (max-width: 940px) {
-    font-size: 0.6rem;
+  font-size: $fontSmallSize;
+  @media only screen and (min-width: $screen-lg-min) and (max-width: $screen-lg-md-max) {
+    font-size: $fontSmallMdSize;
   }
 }
 
 .trade-hash__value {
-  font-weight: 600;
-  color: #a7a7a7;
-  @media only screen and (min-width: 768px) and (max-width: 940px) {
-    font-size: 0.6rem;
+  font-weight: $fontWeightNormal;
+  color: $grayTextColor;
+  @media only screen and (min-width: $screen-lg-min) and (max-width: $screen-lg-md-max) {
+    font-size: $fontSmallMdSize;
   }
 }
