--- a/src/components/trade_information/trade_reputation/tradeReputation.scss
+++ b/src/components/trade_information/trade_reputation/tradeReputation.scss
@@ -1,12 +1,14 @@
+@import '.././../../styles/variables.scss';
+
 .trade-reputation__avatar {
   width: 40px;
   height: 40px;
   align-items: center;
-  background-color: #C6D2E5;
+  background-color: $bgActiveTradeColor;
   border-radius: 50%;
   background-size: cover;
   overflow: hidden;
-  margin-bottom: 15px;
+  margin-bottom: 0.9rem;
 
   img {
     object-fit: cover;
@@ -17,14 +19,14 @@
 }
 
 .trade-reputation_stats {
-  font-weight: 600;
+  font-weight: $fontWeightBold;
   margin-bottom: 15px;
 
   span {
     color: red;
 
     &:first-child {
-      color: #52D48C;
+      color: $btnBgColor;
     }
   }
 }
