--- a/src/components/trade/tradeItem.scss
+++ b/src/components/trade/tradeItem.scss
@@ -129,7 +129,7 @@
       justify-content: center;
       flex-direction: column;
       align-items: center;
-      width: 3.5rem;
+      width: 3.9rem;;
 
       .trade-item__buyer {
         width: 40px;
